- refactor - detailed pdf area report - phylogenetic tool - area report update - point generator tool