@@ -1,14 +1,11 @@
 package au.org.ala.spatial.composer.add.area;
 
+import au.org.ala.spatial.StringConstants;
 import au.org.ala.spatial.composer.layer.EnvLayersCombobox;
-import au.org.ala.spatial.data.BiocacheQuery;
-import au.org.ala.spatial.data.Query;
-import au.org.ala.spatial.util.CommonData;
-import au.org.ala.spatial.util.LayersUtil;
-import au.org.ala.spatial.util.SPLFilter;
+import au.org.ala.spatial.util.*;
 import au.org.emii.portal.composer.MapComposer;
 import au.org.emii.portal.menu.MapLayer;
-import au.org.emii.portal.util.LayerUtilities;
+import au.org.emii.portal.util.LayerUtilitiesImpl;
 import net.sf.json.JSONObject;
 import org.ala.layers.legend.Facet;
 import org.apache.commons.httpclient.HttpClient;
@@ -20,51 +17,48 @@ import org.zkoss.zk.ui.util.Clients;
 import org.zkoss.zul.*;
 
 import java.net.URLEncoder;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 /**
  * @author ajay
  */
 public class AreaEnvironmentalEnvelope extends AreaToolComposer {
 
-    private static Logger logger = Logger.getLogger(AreaEnvironmentalEnvelope.class);
-
     public static final String LAYER_PREFIX = "working envelope: ";
+    private static final Logger LOGGER = Logger.getLogger(AreaEnvironmentalEnvelope.class);
     private static final long serialVersionUID = -26560838825366347L;
-    private static final String[] FILTER_COLOURS = {"0x0000FF", "0x000FF00", "0x00FFFF", "0xFF00FF"};
-    private EnvLayersCombobox cbEnvLayers;
+    private static final String[] FILTER_COLOURS = {"0x0000FF", "0x000FF00", "0x00FFFF", "0xFF00FF" };
+    private Div popupContinous;
+    private Slider popupSliderMin;
+    private Slider popupSliderMax;
+    private Label popupRange;
+    private Doublebox popupMinimum;
+    private Doublebox popupMaximum;
+    private Textbox popupIdx;
+    private Button removeContinous;
+    private Label labelContinous;
+    private Button applyContinous;
     private Listbox lbSelLayers;
-    public Div popup_continous;
-    public Slider popup_slider_min;
-    public Slider popup_slider_max;
-    public Label popup_range;
-    public Doublebox popup_minimum;
-    public Doublebox popup_maximum;
-    public Textbox popup_idx;
-    public Button remove_continous;
-    public Button preview_continous;
-    public Label label_continous;
-    public Button apply_continous;
-    String[] results = null;
-    private List<JSONObject> selectedLayers;
-    private Map<String, SPLFilter> selectedSPLFilterLayers;
-    private MapComposer mc;
-    LayersUtil layersUtil;
-    Button filter_done;
+    private EnvLayersCombobox cbEnvLayers;
+    private Button filterDone;
     /**
      * for functions in popup box
      */
-    SPLFilter popup_filter;
-    Listcell popup_cell;
-    Listitem popup_item;
-    String activeAreaExtent = null;
-    String activeAreaMetadata = null;
+    private SPLFilter popupFilter;
+    private Listcell popupCell;
+    private Listitem popupItem;
+    private Textbox txtLayerName;
+    private int speciescount = 0;
+    private boolean isDirtyCount = true;
+    //set to true and calling 'remove all layers' will end by closing the popup.
+    private boolean cancelling = false;
+    private List<JSONObject> selectedLayers;
+    private Map<String, SPLFilter> selectedSPLFilterLayers;
+    private MapComposer mc;
     private String activeAreaSize = null;
-    Textbox txtLayerName;
-    int speciescount = 0;
-    boolean isDirtyCount = true;
-    String final_wkt = null;
-    boolean cancelling = false; //set to true and calling 'remove all layers' will end by closing the popup.
 
     @Override
     public void afterCompose() {
@@ -73,14 +67,12 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
         //get the current MapComposer instance
         mc = getMapComposer();
 
-        layersUtil = new LayersUtil(mc);
+        selectedLayers = new ArrayList<JSONObject>();
+        selectedSPLFilterLayers = new HashMap<String, SPLFilter>();
 
-        selectedLayers = new Vector<JSONObject>();
-        selectedSPLFilterLayers = new Hashtable<String, SPLFilter>();
+        txtLayerName.setValue(getMapComposer().getNextAreaLayerName(CommonData.lang(StringConstants.DEFAULT_AREA_LAYER_NAME)));
 
-        txtLayerName.setValue(getMapComposer().getNextAreaLayerName(CommonData.lang("default_area_layer_name")));
-
-        cbEnvLayers.setIncludeLayers("environmental");
+        cbEnvLayers.setIncludeLayers(StringConstants.ENVIRONMENTAL);
     }
 
     public String getAreaSize() {
@@ -95,38 +87,36 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
         applyFilter(true);
     }
 
-    public void onChange$popup_minimum(Event event) {
+    public void onChange$popupMinimum(Event event) {
         isDirtyCount = true;
-        logger.debug("popup_minimum=" + popup_minimum.getValue() + " " + event.getData());
-        popup_filter.minimum_value = popup_minimum.getValue();
+        LOGGER.debug("popupMinimum=" + popupMinimum.getValue() + " " + event.getData());
+        popupFilter.setMinimumValue(popupMinimum.getValue());
         serverFilter();
 
     }
 
-    public void onChange$popup_maximum(Event event) {
+    public void onChange$popupMaximum(Event event) {
         isDirtyCount = true;
-        popup_filter.maximum_value = popup_maximum.getValue();
+        popupFilter.setMaximumValue(popupMaximum.getValue());
         serverFilter();
     }
 
-    public void doAdd(String new_value) {
-
+    public void doAdd(String newValue) {
+        String nv = newValue;
         try {
             JSONObject layer = null;
-            if (new_value.length() == 0) {
-                if (cbEnvLayers.getItemCount() > 0 && cbEnvLayers.getSelectedItem() != null) {
-                    layer = cbEnvLayers.getSelectedItem().getValue();
-                    new_value = layer.getString("name");
-                    cbEnvLayers.setValue("");
-                }
+            if (nv.length() == 0
+                    && cbEnvLayers.getItemCount() > 0
+                    && cbEnvLayers.getSelectedItem() != null) {
+                layer = cbEnvLayers.getSelectedItem().getValue();
+                nv = layer.getString(StringConstants.NAME);
+                cbEnvLayers.setValue("");
             }
-            if (new_value.equals("")) {
+            if (nv.isEmpty()) {
                 return;
             }
 
-            if (selectedLayers.contains(layer)) {
-                //not a new value to add
-            } else {
+            if (!selectedLayers.contains(layer)) {
                 selectedLayers.add(layer);
             }
 
@@ -134,12 +124,12 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
             lbSelLayers.setItemRenderer(new ListitemRenderer() {
 
                 @Override
-                public void render(Listitem li, Object data, int item_idx) {
+                public void render(Listitem li, Object data, int itemIdx) {
                     JSONObject layer = (JSONObject) data;
                     SPLFilter f = getSPLFilter(layer);
 
                     // Col 1: Add the layer name
-                    Listcell lname = new Listcell(f.layer.getString("displayname"));
+                    Listcell lname = new Listcell(f.getLayer().getString(StringConstants.DISPLAYNAME));
                     lname.setStyle("white-space: normal;");
                     lname.setParent(li);
 
@@ -150,7 +140,7 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
                     lc.setParent(li);
 
                     // Col 3: Add the species count and set the onClick event
-                    Listcell count = new Listcell(String.valueOf(f.count));
+                    Listcell count = new Listcell(String.valueOf(f.getCount()));
                     count.setStyle("text-align: right; ");
                     count.setParent(li);
 
@@ -167,9 +157,9 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
 
             showAdjustPopup(layer, lc, li);
 
-            filter_done.setDisabled(false);
+            filterDone.setDisabled(false);
         } catch (Exception e) {
-            logger.error("error adding layer to EE : " + new_value, e);
+            LOGGER.error("error adding layer to EE : " + nv, e);
         }
 
         //reset active area size
@@ -177,25 +167,22 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
     }
 
     private SPLFilter getSPLFilter(JSONObject layer) {
-        SPLFilter splf = null;
-
-        // First check if already present
-        splf = selectedSPLFilterLayers.get(layer.getString("name"));
+        SPLFilter splf = selectedSPLFilterLayers.get(layer.getString(StringConstants.NAME));
 
         // if splf is still null, then it must be new
         // so grab the details from the server
         if (splf == null) {
             splf = new SPLFilter();
             splf.setCount(0);
-            splf.setLayername(layer.getString("name"));
+            splf.setLayername(layer.getString(StringConstants.NAME));
             splf.setLayer(layer);
-            splf.setMinimum_value(layer.getDouble("environmentalvaluemin"));
-            splf.setMaximum_value(layer.getDouble("environmentalvaluemax"));
-            splf.setMinimum_initial(layer.getDouble("environmentalvaluemin"));
-            splf.setMaximum_initial(layer.getDouble("environmentalvaluemax"));
+            splf.setMinimumValue(layer.getDouble("environmentalvaluemin"));
+            splf.setMaximumValue(layer.getDouble("environmentalvaluemax"));
+            splf.setMinimumInitial(layer.getDouble("environmentalvaluemin"));
+            splf.setMaximumInitial(layer.getDouble("environmentalvaluemax"));
             splf.setChanged(false);
 
-            selectedSPLFilterLayers.put(layer.getString("name"), splf);
+            selectedSPLFilterLayers.put(layer.getString(StringConstants.NAME), splf);
         }
 
         return splf;
@@ -205,7 +192,7 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
         Listitem li;
         JSONObject layer;
 
-        popup_continous.setVisible(false);
+        popupContinous.setVisible(false);
 
         if (o == null) {
             //change to get last item
@@ -219,7 +206,7 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
         layer = selectedLayers.get(idx);
 
         //not executing, echo
-        Events.echoEvent("removeLayer", this, layer.getString("name"));
+        Events.echoEvent("removeLayer", this, layer.getString(StringConstants.NAME));
 
         selectedLayers.remove(layer);
 
@@ -227,7 +214,7 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
 
         showAdjustPopup(null);
 
-        filter_done.setDisabled(selectedLayers.size() == 0);
+        filterDone.setDisabled(selectedLayers.isEmpty());
 
         listFix();
 
@@ -239,9 +226,9 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
         Listitem li;
         JSONObject layer;
 
-        popup_continous.setVisible(false);
+        popupContinous.setVisible(false);
 
-        filter_done.setDisabled(true);
+        filterDone.setDisabled(true);
 
         //change to get last item
         int count = lbSelLayers.getItemCount();
@@ -255,13 +242,13 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
         layer = selectedLayers.get(idx);
 
         //not executing, echo
-        Events.echoEvent("removeLayerClearSelected", this, layer.getString("displayname"));
+        Events.echoEvent("removeLayerClearSelected", this, layer.getString(StringConstants.DISPLAYNAME));
 
         selectedLayers.remove(layer);
 
         li.detach();
 
-        if (selectedLayers.size() == 0) {
+        if (selectedLayers.isEmpty()) {
             showAdjustPopup(null);
             listFix();
         }
@@ -269,7 +256,7 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
 
     public void removeLayerClearSelected(Event event) {
         String layername = (String) event.getData();
-        if (selectedLayers.size() > 0) {
+        if (!selectedLayers.isEmpty()) {
             Events.echoEvent("onClick$btnClearSelection", this, null);
         }
         if (mc.getMapLayer(LAYER_PREFIX + layername) != null) {
@@ -282,13 +269,11 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
         String layername = all;
         int p = layername.indexOf('|');
         if (p > 0) {
-            Events.echoEvent("removeLayers", this, layername.substring(p + 1));
+            Events.echoEvent(StringConstants.REMOVE_LAYERS, this, layername.substring(p + 1));
             layername = layername.substring(0, p);
         }
         if (mc.getMapLayer(LAYER_PREFIX + layername) != null) {
             mc.removeLayer(LAYER_PREFIX + layername);
-        } else if (layername.equalsIgnoreCase("Active Area")) {
-            showActiveArea();
         }
         if (p <= 0) {
             detach();
@@ -309,60 +294,61 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
             Listitem li = list.get(i);
             li.setDisabled(true);
         }
-        if (list != null && list.size() > 0) {
+        if (list != null && !list.isEmpty()) {
             Listitem li = list.get(i);
             li.setDisabled(false);
         }
     }
 
-    public void onScroll$popup_slider_min(Event event) {
-        logger.debug("Changing min slider");
+    public void onScroll$popupSliderMin(Event event) {
+        LOGGER.debug("Changing min slider");
         try {
 
-            int curpos = popup_slider_min.getCurpos();
+            int curpos = popupSliderMin.getCurpos();
 
-            double range = popup_filter.maximum_initial - popup_filter.minimum_initial;
+            double range = popupFilter.getMaximumInitial() - popupFilter.getMinimumInitial();
 
-            popup_minimum.setValue(((float) (curpos / 100.0 * range + popup_filter.minimum_initial)));
+            popupMinimum.setValue((float) (curpos / 100.0 * range + popupFilter.getMinimumInitial()));
 
-            popup_filter.minimum_value = popup_minimum.getValue();
+            popupFilter.setMinimumValue(popupMinimum.getValue());
 
-            ((Listcell) popup_item.getChildren().get(1)).setLabel(popup_filter.getFilterString());
+            ((Listcell) popupItem.getChildren().get(1)).setLabel(popupFilter.getFilterString());
 
             serverFilter();
 
         } catch (Exception e) {
-            logger.error("slider change min", e);
+            LOGGER.error("slider change min", e);
         }
     }
 
-    public void onScroll$popup_slider_max(Event event) {
-        logger.debug("Changing max slider");
+    public void onScroll$popupSliderMax(Event event) {
+        LOGGER.debug("Changing max slider");
         try {
 
-            int curpos = popup_slider_max.getCurpos();
+            int curpos = popupSliderMax.getCurpos();
 
-            double range = popup_filter.maximum_initial - popup_filter.minimum_initial;
+            double range = popupFilter.getMaximumInitial() - popupFilter.getMinimumInitial();
 
-            popup_maximum.setValue(((float) (curpos / 100.0 * range + popup_filter.minimum_initial)));
+            popupMaximum.setValue((float) (curpos / 100.0 * range + popupFilter.getMinimumInitial()));
 
-            popup_filter.maximum_value = popup_maximum.getValue();
+            popupFilter.setMaximumValue(popupMaximum.getValue());
 
-            ((Listcell) popup_item.getChildren().get(1)).setLabel(popup_filter.getFilterString());
+            ((Listcell) popupItem.getChildren().get(1)).setLabel(popupFilter.getFilterString());
 
             serverFilter();
         } catch (Exception e) {
-            logger.error("slider change max", e);
+            LOGGER.error("slider change max", e);
         }
     }
 
-    private void showAdjustPopup(Object o) {
+    private void showAdjustPopup(Object obj) {
+        Object o = obj;
         if (o == null) {
 
             //get the Count cell
             int i = lbSelLayers.getItemCount();
             if (i < 1) {
-                popup_continous.setVisible(false);
+                popupContinous.setVisible(false);
                 return;
             }
 
@@ -376,103 +362,100 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
         Listitem li = (Listitem) lc.getParent();
         JSONObject layer = li.getValue();
 
-        popup_filter = getSPLFilter(layer);
-        popup_idx.setValue(layer.getString("displayname"));
+        popupFilter = getSPLFilter(layer);
+        popupIdx.setValue(layer.getString(StringConstants.DISPLAYNAME));
 
-        popup_cell = lc;
-        popup_item = li;
+        popupCell = lc;
+        popupItem = li;
 
-        label_continous.setValue("edit envelope for: " + layer.getString("displayname"));
-        String csv = String.format("%.4f", (float) popup_filter.minimum_initial) + " - " + String.format("%.4f", (float) popup_filter.maximum_initial);
-        popup_range.setValue(csv);
+        labelContinous.setValue("edit envelope for: " + layer.getString(StringConstants.DISPLAYNAME));
+        String csv = String.format("%.4f", (float) popupFilter.getMinimumInitial()) + " - " + String.format("%.4f", (float) popupFilter.getMaximumInitial());
+        popupRange.setValue(csv);
 
-        popup_minimum.setValue((float) (popup_filter.minimum_value));
-        popup_maximum.setValue((float) (popup_filter.maximum_value));
+        popupMinimum.setValue((float) (popupFilter.getMinimumValue()));
+        popupMaximum.setValue((float) (popupFilter.getMaximumValue()));
 
-        double range = popup_filter.maximum_initial - popup_filter.minimum_initial;
-        int maxcursor = (int) ((popup_filter.maximum_value - popup_filter.minimum_initial)
+        double range = popupFilter.getMaximumInitial() - popupFilter.getMinimumInitial();
+        int maxcursor = (int) ((popupFilter.getMinimumValue() - popupFilter.getMinimumInitial())
                 / (range) * 100);
-        int mincursor = (int) ((popup_filter.minimum_value - popup_filter.minimum_initial)
+        int mincursor = (int) ((popupFilter.getMinimumValue() - popupFilter.getMinimumInitial())
                 / (range) * 100);
 
-        doApplyFilter(layer, Double.toString(popup_filter.minimum_value), Double.toString(popup_filter.maximum_value));
+        doApplyFilter(layer, Double.toString(popupFilter.getMinimumValue()), Double.toString(popupFilter.getMaximumValue()));
 
-        popup_slider_min.setCurpos(mincursor);
-        popup_slider_max.setCurpos(maxcursor);
+        popupSliderMin.setCurpos(mincursor);
+        popupSliderMax.setCurpos(maxcursor);
 
         lc.focus();
-        logger.debug("attaching: " + lc + lc.getValue());
-        popup_continous.setVisible(true);
+        LOGGER.debug("attaching: " + lc + lc.getValue());
+        popupContinous.setVisible(true);
 
     }
 
     private void showAdjustPopup(JSONObject layer, Listcell lc, Listitem li) {
-        popup_filter = getSPLFilter(layer);
-        popup_idx.setValue(layer.getString("displayname"));
+        popupFilter = getSPLFilter(layer);
+        popupIdx.setValue(layer.getString(StringConstants.DISPLAYNAME));
 
-        popup_cell = lc;
-        popup_item = li;
+        popupCell = lc;
+        popupItem = li;
 
-        label_continous.setValue("edit envelope for: " + layer.getString("displayname"));
+        labelContinous.setValue("edit envelope for: " + layer.getString(StringConstants.DISPLAYNAME));
 
-        String csv = String.format("%.4f", (float) popup_filter.minimum_value) + " - " + String.format("%.4f", (float) popup_filter.maximum_value);
-        popup_range.setValue(csv);
+        String csv = String.format("%.4f", (float) popupFilter.getMinimumValue()) + " - " + String.format("%.4f", (float) popupFilter.getMaximumValue());
+        popupRange.setValue(csv);
 
-        popup_minimum.setValue(((float) (popup_filter.minimum_value)));
-        popup_maximum.setValue(((float) (popup_filter.maximum_value)));
+        popupMinimum.setValue((float) popupFilter.getMinimumValue());
+        popupMaximum.setValue((float) popupFilter.getMaximumValue());
 
-        double range = popup_filter.maximum_initial - popup_filter.minimum_initial;
-        int maxcursor = (int) ((popup_filter.maximum_value - popup_filter.minimum_initial)
+        double range = popupFilter.getMaximumValue() - popupFilter.getMinimumValue();
+        int maxcursor = (int) ((popupFilter.getMaximumValue() - popupFilter.getMinimumValue())
                 / (range) * 100);
-        int mincursor = (int) ((popup_filter.minimum_value - popup_filter.minimum_initial)
+        int mincursor = (int) ((popupFilter.getMinimumValue() - popupFilter.getMinimumValue())
                 / (range) * 100);
 
-        doApplyFilter(layer, Double.toString(popup_filter.minimum_value), Double.toString(popup_filter.maximum_value));
+        doApplyFilter(layer, Double.toString(popupFilter.getMinimumValue()), Double.toString(popupFilter.getMaximumValue()));
 
-        popup_slider_min.setCurpos(mincursor);
-        popup_slider_max.setCurpos(maxcursor);
+        popupSliderMin.setCurpos(mincursor);
+        popupSliderMax.setCurpos(maxcursor);
 
-        popup_continous.setVisible(true);
+        popupContinous.setVisible(true);
     }
 
     private void serverFilter() {
-        doApplyFilter(popup_filter.layer, Double.toString(popup_filter.minimum_value), Double.toString(popup_filter.maximum_value));
+        doApplyFilter(popupFilter.getLayer(), Double.toString(popupFilter.getMinimumValue()), Double.toString(popupFilter.getMaximumValue()));
     }
 
     private void doApplyFilter(JSONObject layer, String val1, String val2) {
-        String layername = (layer == null) ? "null" : layer.toString(4);
-        try {
-
+        if (layer == null) {
+            LOGGER.error("error adding new filtered layer=null, min/max: " + val1 + "/" + val2);
+        } else {
             loadMap(layer, lbSelLayers.getItemCount() - 1, Double.parseDouble(val1), Double.parseDouble(val2), false);
-
-        } catch (Exception e) {
-            logger.error("error adding new filtered layer min/max: " + val1 + "/" + val2 + " layer:" + layername, e);
         }
     }
 
-    public void onClick$filter_done(Event event) {
+    public void onClick$filterDone(Event event) {
         ok = true;
 
         try {
             //create the layer
             StringBuilder sbProcessUrl = new StringBuilder();
-            sbProcessUrl.append(CommonData.satServer).append("/ws/envelope?area=").append(getWkt());
+            sbProcessUrl.append(CommonData.getSatServer()).append("/ws/envelope?area=").append(getWkt());
             HttpClient client = new HttpClient();
             PostMethod post = new PostMethod(sbProcessUrl.toString());
-            logger.debug(sbProcessUrl.toString());
+            LOGGER.debug(sbProcessUrl.toString());
 
-            post.addRequestHeader("Accept", "text/plain");
+            post.addRequestHeader(StringConstants.ACCEPT, StringConstants.TEXT_PLAIN);
 
-            int result = client.executeMethod(post);
+            client.executeMethod(post);
             String slist = post.getResponseBodyAsString();
             String[] list = slist.split("\n");
             String pid = list[0];
-            String url = CommonData.geoServer + "/wms?service=WMS&version=1.1.0&request=GetMap&layers=ALA:envelope_" + pid + "&FORMAT=image%2Fpng";
-            activeAreaExtent = list[1];
+            String url = CommonData.getGeoServer() + "/wms?service=WMS&version=1.1.0&request=GetMap&layers=ALA:envelope_" + pid + "&FORMAT=image%2Fpng";
+            String activeAreaExtent = list[1];
             activeAreaSize = list[2];
 
             //load the layer
-            MapLayer ml = mc.addWMSLayer(pid, txtLayerName.getText(), url, 0.75f, null, null, LayerUtilities.ENVIRONMENTAL_ENVELOPE, null, null);
+            MapLayer ml = mc.addWMSLayer(pid, txtLayerName.getText(), url, 0.75f, null, null, LayerUtilitiesImpl.ENVIRONMENTAL_ENVELOPE, null, null);
 
             //add colour!
             ml.setRedVal(255);
@@ -489,22 +472,23 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
             for (int i = 0; i < selectedLayers.size(); i++) {
                 JSONObject layer = selectedLayers.get(i);
                 SPLFilter f = getSPLFilter(layer);
-                sb.append(f.layername).append(": ").append(f.getFilterString()).append("<br>");
+                sb.append(f.getLayername()).append(": ").append(f.getFilterString()).append("<br>");
 
-                sbLayerList.append(f.layername);
+                sbLayerList.append(f.getLayername());
                 if (i < selectedLayers.size() - 1) {
                     sbLayerList.append(":");
                 }
             }
-            activeAreaMetadata = LayersUtil.getMetadata(sb.toString());
+            String activeAreaMetadata = LayersUtil.getMetadata(sb.toString());
 
             getMapComposer().setAttribute("activeLayerName", sbLayerList.toString());
             getMapComposer().setAttribute("mappolygonlayer", sb.toString());
 
+            String finalWkt = null;
             try {
-                final_wkt = getWkt();
+                finalWkt = getWkt();
             } catch (Exception e) {
-                logger.error("failed to get WKT", e);
+                LOGGER.error("failed to get WKT", e);
             }
 
             this.layerName = ml.getName();
@@ -516,35 +500,35 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
             ml.getMapLayerMetadata().setBbox(bb);
             ml.getMapLayerMetadata().setMoreInfo(activeAreaMetadata);
 
-            ml.setWKT("ENVELOPE(" + final_wkt + ")");
-            ml.setEnvelope(final_wkt); //not the actual WKT
+            ml.setWKT(StringConstants.ENVELOPE + "(" + finalWkt + ")");
+            //not the actual WKT
+            ml.setEnvelope(finalWkt);
             try {
                 double area = Double.parseDouble(activeAreaSize.replace(",", ""));
                 activeAreaSize = String.format("%,.2f", area);
-            } catch (Exception e) {
+            } catch (NumberFormatException e) {
+                LOGGER.error("failed to parse environmental envelope area for: " + activeAreaSize);
             }
             ml.setAreaSqKm(activeAreaSize);
             ml.setFacets(getFacets());
 
-            removeAllSelectedLayers(true);  //this also shows active area
+            //this also shows active area
+            removeAllSelectedLayers(true);
 
         } catch (Exception e) {
-            logger.error("unable to create envelope layer: ", e);
+            LOGGER.error("unable to create envelope layer: ", e);
         }
 
         //do detach after adding the new layer
         mc.updateLayerControls();
     }
 
-    void showActiveArea() {
-    }
-
-    public void onClick$apply_continous(Event event) {
+    public void onClick$applyContinous(Event event) {
         applyFilter();
         isDirtyCount = false;
     }
 
-    public void onClick$remove_continous(Event event) {
+    public void onClick$removeContinous(Event event) {
         deleteSelectedFilters(null);
         isDirtyCount = false;
     }
@@ -559,8 +543,8 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
         applyFilterEvented();
 
         speciescount = getSpeciesCount();
-        popup_filter.setCount(speciescount);
-        ((Listcell) popup_item.getChildren().get(2)).setLabel(speciescount + "");
+        popupFilter.setCount(speciescount);
+        ((Listcell) popupItem.getChildren().get(2)).setLabel(speciescount + "");
 
         Clients.clearBusy();
     }
@@ -597,10 +581,10 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
     }
 
     private void applyFilterEvented() {
-        popup_filter.minimum_value = (popup_minimum.getValue());
-        popup_filter.maximum_value = (popup_maximum.getValue());
+        popupFilter.setMinimumValue(popupMinimum.getValue());
+        popupFilter.setMaximumValue(popupMaximum.getValue());
 
-        ((Listcell) popup_item.getChildren().get(1)).setLabel(popup_filter.getFilterString());
+        ((Listcell) popupItem.getChildren().get(1)).setLabel(popupFilter.getFilterString());
 
         serverFilter();
 
@@ -611,22 +595,21 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
             Clients.clearBusy();
         }
 
-        //TODO: handle invalid counts/errors
         try {
-            popup_filter.count = Integer.parseInt(strCount.split("\n")[0]);
-            ((Listcell) popup_item.getChildren().get(2)).setLabel(strCount.split("\n")[0]);
+            popupFilter.setCount(Integer.parseInt(strCount.split("\n")[0]));
+            ((Listcell) popupItem.getChildren().get(2)).setLabel(strCount.split("\n")[0]);
 
-        } catch (Exception e) {
-            logger.error("error parsing species count from:" + strCount, e);
+        } catch (NumberFormatException e) {
+            LOGGER.error("error parsing species count from:" + strCount, e);
         }
     }
 
-    private MapLayer loadMap(JSONObject layer, int depth, double min, double max, boolean final_layer) {
+    private MapLayer loadMap(JSONObject layer, int depth, double min, double max, boolean finalLayer) {
 
-        String colour = final_layer ? "0xFF0000" : FILTER_COLOURS[depth % FILTER_COLOURS.length];
+        String colour = finalLayer ? "0xFF0000" : FILTER_COLOURS[depth % FILTER_COLOURS.length];
         String filter
                 = "<?xml version=\"1.0\" encoding=\"UTF-8\"?><StyledLayerDescriptor xmlns=\"http://www.opengis.net/sld\">"
-                + "<NamedLayer><Name>ALA:" + layer.getString("name") + "</Name>"
+                + "<NamedLayer><Name>ALA:" + layer.getString(StringConstants.NAME) + "</Name>"
                 + "<UserStyle><FeatureTypeStyle><Rule><RasterSymbolizer><Geometry></Geometry>"
                 + "<ColorMap>"
                 + "<ColorMapEntry color=\"" + colour + "\" opacity=\"1\" quantity=\"" + (min - Math.abs(min * 0.0000001)) + "\"/>"
@@ -636,20 +619,20 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
                 + "</ColorMap></RasterSymbolizer></Rule></FeatureTypeStyle></UserStyle></NamedLayer></StyledLayerDescriptor>";
 
         try {
-            filter = URLEncoder.encode(filter, "UTF-8");
+            filter = URLEncoder.encode(filter, StringConstants.UTF_8);
         } catch (Exception e) {
-            logger.error("cannot encode filter sld: " + filter, e);
+            LOGGER.error("cannot encode filter sld: " + filter, e);
         }
 
-        MapLayer ml = mc.getMapLayer(LAYER_PREFIX + layer.getString("name"));
+        MapLayer ml = mc.getMapLayer(LAYER_PREFIX + layer.getString(StringConstants.NAME));
         if (ml == null) {
-            ml = getMapComposer().addWMSLayer(LAYER_PREFIX + layer.getString("name"),
-                    LAYER_PREFIX + layer.getString("displayname"),
+            ml = getMapComposer().addWMSLayer(LAYER_PREFIX + layer.getString(StringConstants.NAME),
+                    LAYER_PREFIX + layer.getString(StringConstants.DISPLAYNAME),
                     layer.getString("displaypath").replace("/gwc/service", "") + "&sld_body=" + filter,
                     (float) 0.75,
-                    CommonData.layersServer + "/layers/view/more/" + layer.getString("id"),
-                    CommonData.geoServer + "/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=20&HEIGHT=9&LAYER=" + layer.getString("name"),
-                    LayerUtilities.ENVIRONMENTAL_ENVELOPE,
+                    CommonData.getLayersServer() + "/layers/view/more/" + layer.getString(StringConstants.ID),
+                    CommonData.getGeoServer() + "/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=20&HEIGHT=9&LAYER=" + layer.getString(StringConstants.NAME),
+                    LayerUtilitiesImpl.ENVIRONMENTAL_ENVELOPE,
                     null, null, null);
         } else {
             ml.setUri(layer.getString("displaypath").replace("/gwc/service", "") + "&sld_body=" + filter);
@@ -659,11 +642,11 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
         return ml;
     }
 
-    ArrayList<Facet> getFacets() {
-        ArrayList<Facet> facets = new ArrayList<Facet>();
+    List<Facet> getFacets() {
+        List<Facet> facets = new ArrayList<Facet>();
         for (int i = 0; i < selectedLayers.size(); i++) {
-            SPLFilter splf = selectedSPLFilterLayers.get(selectedLayers.get(i).getString("name"));
-            Facet f = new Facet(CommonData.getLayerFacetName(splf.layername), splf.minimum_value, splf.maximum_value, true);
+            SPLFilter splf = selectedSPLFilterLayers.get(selectedLayers.get(i).getString(StringConstants.NAME));
+            Facet f = new Facet(CommonData.getLayerFacetName(splf.getLayername()), splf.getMinimumValue(), splf.getMaximumValue(), true);
             facets.add(f);
         }
         return facets;
@@ -672,11 +655,11 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
     String getWkt() {
         StringBuilder sb = new StringBuilder();
         for (int i = 0; i < selectedLayers.size(); i++) {
-            SPLFilter splf = selectedSPLFilterLayers.get(selectedLayers.get(i).getString("name"));
+            SPLFilter splf = selectedSPLFilterLayers.get(selectedLayers.get(i).getString(StringConstants.NAME));
             if (sb.length() > 0) {
                 sb.append(":");
             }
-            sb.append(CommonData.getLayerFacetName(splf.layername)).append(",").append(splf.minimum_value).append(",").append(splf.maximum_value);
+            sb.append(CommonData.getLayerFacetName(splf.getLayername())).append(",").append(splf.getMinimumValue()).append(",").append(splf.getMaximumValue());
         }
         return sb.toString();
     }
@@ -690,19 +673,19 @@ public class AreaEnvironmentalEnvelope extends AreaToolComposer {
         StringBuilder sb = new StringBuilder();
         if (showActiveArea) {
             sb.append("Active Area");
-            if (selectedLayers.size() > 0) {
+            if (!selectedLayers.isEmpty()) {
                 sb.append("|");
             }
         }
         for (int i = 0; i < selectedLayers.size(); i++) {
             JSONObject layer = selectedLayers.get(i);
-            sb.append(layer.getString("name"));
+            sb.append(layer.getString(StringConstants.NAME));
             if (i < selectedLayers.size() - 1) {
                 sb.append("|");
             }
         }
-        if (selectedLayers.size() > 0) {
-            Events.echoEvent("removeLayers", this, sb.toString());
+        if (!selectedLayers.isEmpty()) {
+            Events.echoEvent(StringConstants.REMOVE_LAYERS, this, sb.toString());
         } else if (cancelling) {
             this.detach();
         }
