@@ -1,21 +1,19 @@
 package au.org.ala.spatial.composer.layer;
 
+import au.org.ala.spatial.StringConstants;
 import au.org.ala.spatial.util.CommonData;
-import au.org.emii.portal.composer.MapComposer;
 import net.sf.json.JSONArray;
 import net.sf.json.JSONObject;
 import org.apache.commons.httpclient.HttpClient;
 import org.apache.commons.httpclient.methods.GetMethod;
 import org.apache.log4j.Logger;
 import org.zkoss.zk.ui.Sessions;
-import org.zkoss.zk.ui.WrongValueException;
 import org.zkoss.zk.ui.event.InputEvent;
 import org.zkoss.zul.Combobox;
 import org.zkoss.zul.Comboitem;
 
 import java.net.URLEncoder;
 import java.util.Iterator;
-import java.util.Properties;
 
 /**
  * Extend a combobox to provide autocomplete facilities for all mappable layers
@@ -24,20 +22,10 @@ import java.util.Properties;
  */
 public class ContextualLayersAutoComplete extends Combobox {
 
-    private static Logger logger = Logger.getLogger(ContextualLayersAutoComplete.class);
-    ;
+    private static final Logger LOGGER = Logger.getLogger(ContextualLayersAutoComplete.class);
 
     public ContextualLayersAutoComplete() {
-        refresh(""); //init the child comboitems
-    }
-
-    public ContextualLayersAutoComplete(String value) throws WrongValueException {
-        super(value);
-    }
-
-    @Override
-    public void setValue(String value) {
-        super.setValue(value);
+        refresh("");
     }
 
     /**
@@ -51,49 +39,54 @@ public class ContextualLayersAutoComplete extends Combobox {
 
     private void refresh(String val) {
 
-        String baseUrl = CommonData.layersServer + "/layers/";
+        //don't do autocomplete when < 3 characters
+        if (val.length() < 3) {
+            return;
+        }
+
+        String baseUrl = CommonData.getLayersServer() + "/layers/";
         try {
 
             Iterator it = getItems().iterator();
 
-            JSONArray results = null;
+            JSONArray results;
             String lsurl = baseUrl;
             if (val.length() == 0) {
                 results = CommonData.getLayerListJSONArray();
             } else {
-                lsurl += "search/?q=" + URLEncoder.encode(val, "UTF-8");
+                lsurl += "search/?q=" + URLEncoder.encode(val, StringConstants.UTF_8);
 
-                logger.debug("nsurl: " + lsurl);
+                LOGGER.debug("nsurl: " + lsurl);
 
                 HttpClient client = new HttpClient();
                 GetMethod get = new GetMethod(lsurl);
 
-                get.addRequestHeader("Accept", "application/json, text/javascript, */*");
+                get.addRequestHeader(StringConstants.ACCEPT, StringConstants.JSON_JAVASCRIPT_ALL);
 
-                int result = client.executeMethod(get);
+                client.executeMethod(get);
                 String slist = get.getResponseBodyAsString();
 
                 results = JSONArray.fromObject(slist);
             }
 
-            logger.debug("got " + results.size() + " layers");
+            LOGGER.debug("got " + results.size() + " layers");
 
             Sessions.getCurrent().setAttribute("layerlist", results);
 
-            if (results.size() > 0) {
+            if (!results.isEmpty()) {
 
                 for (int i = 0; i < results.size(); i++) {
 
                     JSONObject jo = results.getJSONObject(i);
 
-                    if (!jo.getBoolean("enabled") || (jo.getString("type").equalsIgnoreCase("environmental"))) {
+                    if (!jo.getBoolean(StringConstants.ENABLED) || (StringConstants.ENVIRONMENTAL.equalsIgnoreCase(jo.getString(StringConstants.TYPE)))) {
                         continue;
                     }
 
-                    String displayName = jo.getString("displayname");
-                    String type = jo.getString("type");
+                    String displayName = jo.getString(StringConstants.DISPLAYNAME);
+                    String type = jo.getString(StringConstants.TYPE);
 
-                    Comboitem myci = null;
+                    Comboitem myci;
                     if (it != null && it.hasNext()) {
                         myci = ((Comboitem) it.next());
                         myci.setLabel(displayName);
@@ -103,12 +96,12 @@ public class ContextualLayersAutoComplete extends Combobox {
                         myci.setParent(this);
                     }
                     String c2 = "";
-                    if (jo.containsKey("classification2") && !jo.getString("classification2").equals("null")) {
-                        c2 = jo.getString("classification2") + ": ";
+                    if (jo.containsKey(StringConstants.CLASSIFICATION2) && !StringConstants.NULL.equals(jo.getString(StringConstants.CLASSIFICATION2))) {
+                        c2 = jo.getString(StringConstants.CLASSIFICATION2) + ": ";
                     }
                     String c1 = "";
-                    if (jo.containsKey("classification1") && !jo.getString("classification1").equals("null")) {
-                        c1 = jo.getString("classification1") + ": ";
+                    if (jo.containsKey(StringConstants.CLASSIFICATION1) && !StringConstants.NULL.equals(jo.getString(StringConstants.CLASSIFICATION1))) {
+                        c1 = jo.getString(StringConstants.CLASSIFICATION1) + ": ";
                     }
                     myci.setDescription(c1 + c2 + type);
                     myci.setDisabled(false);
@@ -122,7 +115,7 @@ public class ContextualLayersAutoComplete extends Combobox {
             }
 
         } catch (Exception e) {
-            logger.error("Error searching for layers:", e);
+            LOGGER.error("Error searching for layers:", e);
         }
     }
 }
