@@ -4,10 +4,11 @@
  */
 package au.org.ala.spatial.composer.layer;
 
+import au.org.ala.spatial.StringConstants;
 import au.org.ala.spatial.util.CommonData;
 import au.org.emii.portal.composer.MapComposer;
 import au.org.emii.portal.menu.MapLayer;
-import au.org.emii.portal.util.LayerUtilities;
+import au.org.emii.portal.util.LayerUtilitiesImpl;
 import net.sf.json.JSONArray;
 import net.sf.json.JSONObject;
 import org.apache.commons.httpclient.HttpClient;
@@ -15,7 +16,6 @@ import org.apache.commons.httpclient.methods.GetMethod;
 import org.apache.log4j.Logger;
 import org.zkoss.zk.ui.Executions;
 import org.zkoss.zk.ui.Sessions;
-import org.zkoss.zk.ui.WrongValueException;
 import org.zkoss.zk.ui.event.InputEvent;
 import org.zkoss.zul.Combobox;
 import org.zkoss.zul.Comboitem;
@@ -24,27 +24,18 @@ import java.net.URLEncoder;
 import java.util.Iterator;
 
 /**
- * same as LayersAutoComplete with type="environmental" layers only
+ * same as LayersAutoComplete with type=Constants.ENVIRONMENTAL layers only
  *
  * @author ajay
  */
 public class EnvLayersCombobox extends Combobox {
 
-    private static Logger logger = Logger.getLogger(EnvLayersCombobox.class);
-    boolean includeAnalysisLayers = false;
-    String includeLayers;
+    private static final Logger LOGGER = Logger.getLogger(EnvLayersCombobox.class);
+    private boolean includeAnalysisLayers = false;
+    private String includeLayers;
 
     public EnvLayersCombobox() {
-        refresh(""); //init the child comboitems
-    }
-
-    public EnvLayersCombobox(String value) throws WrongValueException {
-        super(value);
-    }
-
-    @Override
-    public void setValue(String value) {
-        super.setValue(value);
+        refresh("");
     }
 
     /**
@@ -57,125 +48,121 @@ public class EnvLayersCombobox extends Combobox {
     }
 
     public void refresh(String val) {
-        String baseUrl = CommonData.layersServer + "/layers/";
+        //don't do autocomplete when < 3 characters
+        if (val.length() < 3) {
+            return;
+        }
+
+        String baseUrl = CommonData.getLayersServer() + "/layers/";
         try {
             Iterator it = getItems().iterator();
 
-            JSONArray results = null;
+            JSONArray results;
             String lsurl = baseUrl;
             if (val.length() == 0) {
                 results = CommonData.getLayerListJSONArray();
             } else {
-                lsurl += "search/?q=" + URLEncoder.encode(val, "UTF-8");
+                lsurl += "search/?q=" + URLEncoder.encode(val, StringConstants.UTF_8);
 
-                logger.debug("nsurl: " + lsurl);
+                LOGGER.debug("nsurl: " + lsurl);
 
                 HttpClient client = new HttpClient();
                 GetMethod get = new GetMethod(lsurl);
-                get.addRequestHeader("Accept", "application/json, text/javascript, */*");
+                get.addRequestHeader(StringConstants.ACCEPT, StringConstants.JSON_JAVASCRIPT_ALL);
 
-                int result = client.executeMethod(get);
+                client.executeMethod(get);
                 String slist = get.getResponseBodyAsString();
 
                 results = JSONArray.fromObject(slist);
             }
-            logger.debug("got " + results.size() + " layers");
+            LOGGER.debug("got " + results.size() + " layers");
 
             Sessions.getCurrent().setAttribute("layerlist", results);
 
-            if (results.size() > 0) {
+            if (!results.isEmpty()) {
 
                 for (int i = 0; i < results.size(); i++) {
 
                     JSONObject jo = results.getJSONObject(i);
 
-                    if (!jo.getBoolean("enabled") || !jo.containsKey("displayname") || !jo.containsKey("type")) {
+                    if (!jo.getBoolean(StringConstants.ENABLED) || !jo.containsKey(StringConstants.DISPLAYNAME) || !jo.containsKey(StringConstants.TYPE)
+                            || (!StringConstants.ENVIRONMENTAL.equalsIgnoreCase(jo.getString(StringConstants.TYPE))
+                            && (includeLayers != null && !"AllLayers".equalsIgnoreCase(includeLayers)
+                            && !"MixLayers".equalsIgnoreCase(includeLayers)))) {
                         continue;
                     }
 
-                    String displayName = jo.getString("displayname");
-                    String type = jo.getString("type");
-                    String name = jo.getString("name");
-
-                    if (!type.equalsIgnoreCase("environmental")
-                            && (includeLayers != null && !includeLayers.equalsIgnoreCase("AllLayers") && !includeLayers.equalsIgnoreCase("MixLayers"))) {
-                        continue;
-                    }
+                    String displayName = jo.getString(StringConstants.DISPLAYNAME);
+                    String type = jo.getString(StringConstants.TYPE);
+                    String name = jo.getString(StringConstants.NAME);
 
                     JSONObject layer = CommonData.getLayer(name);
-                    if (layer != null && layer.containsKey("fields")) {
-                        JSONArray ja = layer.getJSONArray("fields");
-                        boolean skip = false;
-                        for (int j = 0; j < ja.size(); j++) {
-                            if (ja.getJSONObject(j).containsKey("addtomap") && !ja.getJSONObject(j).getBoolean("addtomap")) {
+                    boolean skip = false;
+                    if (layer != null && layer.containsKey(StringConstants.FIELDS)) {
+                        JSONArray ja = layer.getJSONArray(StringConstants.FIELDS);
+                        for (int j = 0; j < ja.size() && !skip; j++) {
+                            if (ja.getJSONObject(j).containsKey(StringConstants.ADD_TO_MAP) && !ja.getJSONObject(j).getBoolean(StringConstants.ADD_TO_MAP)) {
                                 skip = true;
                             }
                         }
-                        if (skip) {
-                            continue;
-                        }
                     }
 
-                    Comboitem myci = null;
-                    if (it != null && it.hasNext()) {
-                        myci = ((Comboitem) it.next());
-                        myci.setLabel(displayName);
-                    } else {
-                        it = null;
-                        myci = new Comboitem(displayName);
-                        myci.setParent(this);
+                    if (!skip) {
+                        Comboitem myci;
+                        if (it != null && it.hasNext()) {
+                            myci = ((Comboitem) it.next());
+                            myci.setLabel(displayName);
+                        } else {
+                            it = null;
+                            myci = new Comboitem(displayName);
+                            myci.setParent(this);
+                        }
+                        String c2 = "";
+                        if (jo.containsKey(StringConstants.CLASSIFICATION2) && !StringConstants.NULL.equals(jo.getString(StringConstants.CLASSIFICATION2))) {
+                            c2 = jo.getString(StringConstants.CLASSIFICATION2) + ": ";
+                        }
+                        String c1 = "";
+                        if (jo.containsKey(StringConstants.CLASSIFICATION1) && !StringConstants.NULL.equals(jo.getString(StringConstants.CLASSIFICATION1))) {
+                            c1 = jo.getString(StringConstants.CLASSIFICATION1) + ": ";
+                        }
+                        myci.setDescription(c1 + c2 + type);
+                        myci.setValue(jo);
                     }
-                    String c2 = "";
-                    if (jo.containsKey("classification2") && !jo.getString("classification2").equals("null")) {
-                        c2 = jo.getString("classification2") + ": ";
-                    }
-                    String c1 = "";
-                    if (jo.containsKey("classification1") && !jo.getString("classification1").equals("null")) {
-                        c1 = jo.getString("classification1") + ": ";
-                    }
-                    myci.setDescription(c1 + c2 + type);
-                    myci.setValue(jo);
                 }
             }
 
             if (includeAnalysisLayers) {
                 for (MapLayer ml : getMapComposer().getAnalysisLayers()) {
                     String displayName = ml.getDisplayName();
-                    String type = null;
-                    String name = null;
-                    String classification1 = null;
-                    String classification2 = null;
-                    if (ml.getSubType() == LayerUtilities.ALOC) {
-                        type = "contextual";
+                    String type;
+                    String name;
+                    String classification1;
+                    String classification2;
+                    if (ml.getSubType() == LayerUtilitiesImpl.MAXENT) {
+                        type = StringConstants.ENVIRONMENTAL;
+                        classification1 = StringConstants.ANALYSIS;
+                        classification2 = StringConstants.PREDICTION;
                         name = ml.getName();
-                        classification1 = "Analysis";
-                        classification2 = "Classification";
-                        continue;   //no contextuals
-                    } else if (ml.getSubType() == LayerUtilities.MAXENT) {
-                        type = "environmental";
-                        classification1 = "Analysis";
-                        classification2 = "Prediction";
+                    } else if (ml.getSubType() == LayerUtilitiesImpl.GDM) {
+                        type = StringConstants.ENVIRONMENTAL;
+                        classification1 = StringConstants.ANALYSIS;
+                        classification2 = StringConstants.GDM;
                         name = ml.getName();
-                    } else if (ml.getSubType() == LayerUtilities.GDM) {
-                        type = "environmental";
-                        classification1 = "Analysis";
-                        classification2 = "GDM";
+                    } else if (ml.getSubType() == LayerUtilitiesImpl.ODENSITY) {
+                        type = StringConstants.ENVIRONMENTAL;
+                        classification1 = StringConstants.ANALYSIS;
+                        classification2 = StringConstants.OCCURRENCE_DENSITY;
                         name = ml.getName();
-                    } else if (ml.getSubType() == LayerUtilities.ODENSITY) {
-                        type = "environmental";
-                        classification1 = "Analysis";
-                        classification2 = "Occurrence Density";
-                        name = ml.getName();
-                    } else if (ml.getSubType() == LayerUtilities.SRICHNESS) {
-                        type = "environmental";
-                        classification1 = "Analysis";
-                        classification2 = "Species Richness";
+                    } else if (ml.getSubType() == LayerUtilitiesImpl.SRICHNESS) {
+                        type = StringConstants.ENVIRONMENTAL;
+                        classification1 = StringConstants.ANALYSIS;
+                        classification2 = StringConstants.SPECIES_RICHNESS;
                         name = ml.getName();
                     } else {
                         continue;
                     }
 
-                    Comboitem myci = null;
+                    Comboitem myci;
                     if (it != null && it.hasNext()) {
                         myci = ((Comboitem) it.next());
                         myci.setLabel(displayName);
@@ -189,7 +176,7 @@ public class EnvLayersCombobox extends Combobox {
                     myci.setDisabled(false);
 
                     JSONObject jo = new JSONObject();
-                    jo.put("name", name);
+                    jo.put(StringConstants.NAME, name);
                     myci.setValue(jo);
                 }
             }
@@ -200,7 +187,7 @@ public class EnvLayersCombobox extends Combobox {
             }
 
         } catch (Exception e) {
-            logger.error("Error searching for layers:", e);
+            LOGGER.error("Error searching for layers:", e);
         }
     }
 
@@ -218,10 +205,10 @@ public class EnvLayersCombobox extends Combobox {
 
     public void setIncludeLayers(String includeLayers) {
         this.includeLayers = includeLayers;
-        logger.debug("this.includeLayers=" + this.includeLayers);
+        LOGGER.debug("this.includeLayers=" + this.includeLayers);
     }
 
     public MapComposer getMapComposer() {
-        return (MapComposer) Executions.getCurrent().getDesktop().getPage("MapZul").getFellow("mapPortalPage");
+        return (MapComposer) Executions.getCurrent().getDesktop().getPage("MapZul").getFellow(StringConstants.MAPPORTALPAGE);
     }
 }
