@@ -4,12 +4,13 @@
  */
 package au.org.ala.spatial.composer.tool;
 
+import au.org.ala.spatial.StringConstants;
 import au.org.ala.spatial.composer.progress.ProgressController;
 import au.org.ala.spatial.util.CommonData;
-import au.org.ala.spatial.util.SelectedArea;
 import au.org.emii.portal.menu.MapLayer;
 import au.org.emii.portal.menu.MapLayerMetadata;
-import au.org.emii.portal.util.LayerUtilities;
+import au.org.emii.portal.menu.SelectedArea;
+import au.org.emii.portal.util.LayerUtilitiesImpl;
 import au.org.emii.portal.wms.WMSStyle;
 import org.ala.layers.intersect.SimpleRegion;
 import org.ala.layers.intersect.SimpleShapeFile;
@@ -25,25 +26,24 @@ import org.zkoss.zul.Intbox;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.util.List;
-import java.util.Properties;
 
 /**
  * @author ajay
  */
 public class ALOCComposer extends ToolComposer {
 
-    private static Logger logger = Logger.getLogger(ALOCComposer.class);
+    private static final Logger LOGGER = Logger.getLogger(ALOCComposer.class);
+    private String selectedLayers = "";
+    private int generationCount = 1;
+    private String layerLabel = "";
+    private String legendPath = "";
     private Intbox groupCount;
-    String selectedLayers = "";
-    int generation_count = 1;
-    String layerLabel = "";
-    String legendPath = "";
 
     @Override
     public void afterCompose() {
         super.afterCompose();
 
-        this.selectedMethod = "Classification";
+        this.selectedMethod = StringConstants.CLASSIFICATION;
         this.totalSteps = 4;
 
         this.setIncludeAnalysisLayersForAnyQuery(true);
@@ -51,16 +51,15 @@ public class ALOCComposer extends ToolComposer {
         this.loadAreaLayers();
         this.loadGridLayers(true, false, true);
         this.updateWindowTitle();
-        //this.updateName("Classification #" + generation_count + " - " + groupCount.getValue() + " groups");
-        //this.updateName("My Classification #" + generation_count);
-        this.updateName(getMapComposer().getNextAreaLayerName("My Classification"));
+
+        this.updateName(getMapComposer().getNextAreaLayerName(StringConstants.MY_CLASSIFICATION));
     }
 
     @Override
     public void onLastPanel() {
         super.onLastPanel();
-        //this.updateName("My Classification #" + generation_count + " - " + groupCount.getValue() + " groups");
-        this.updateName(getMapComposer().getNextAreaLayerName("My Classification"));
+
+        this.updateName(getMapComposer().getNextAreaLayerName(StringConstants.MY_CLASSIFICATION));
     }
 
     @Override
@@ -85,11 +84,10 @@ public class ALOCComposer extends ToolComposer {
             if (groupCount.getValue() <= 1 || groupCount.getValue() > 200) {
                 getMapComposer().showMessage("Please enter the number of groups to generate (2 to 200) in step 2.");
                 //highlight step 2
-//                tabboxclassification.setSelectedIndex(1);
                 return -1;
             }
 
-            SelectedArea sa = getSelectedArea();//getMapComposer().getSelectionArea();
+            SelectedArea sa = getSelectedArea();
 
             //estimate analysis size in bytes
             double[][] bbox = null;
@@ -108,36 +106,35 @@ public class ALOCComposer extends ToolComposer {
 
             long cellsInBBox = (long) ((bbox[1][0] - bbox[0][0]) / 0.01 * (bbox[1][1] - bbox[0][1]) / 0.01);
             long size = (groupCount.getValue() + sbenvsel.split(":").length + 2) * cellsInBBox * 4;
-            logger.debug("ALOC estimate size in MB, cells=" + cellsInBBox
+            LOGGER.debug("ALOC estimate size in MB, cells=" + cellsInBBox
                     + ", bbox=" + bbox[0][0] + "," + bbox[0][1] + "," + bbox[1][0] + "," + bbox[1][1]
                     + ", groups=" + groupCount.getValue()
                     + ", layers=" + sbenvsel.split(":").length
                     + ", size=" + size / 1024 / 1024
-                    + ", max size=" + CommonData.settings.getProperty("aloc_size_limit_in_mb"));
-            if (size / 1024 / 1024 > Integer.parseInt(CommonData.settings.getProperty("aloc_size_limit_in_mb"))) {
+                    + ", max size=" + CommonData.getSettings().getProperty("aloc_size_limit_in_mb"));
+            if (size / 1024 / 1024 > Integer.parseInt(CommonData.getSettings().getProperty("aloc_size_limit_in_mb"))) {
                 getMapComposer().showMessage("Analysis is too large.  Reduce the number of groups, number of layers or area.", this);
                 return -1;
             }
 
             HttpClient client = new HttpClient();
-            //GetMethod get = new GetMethod(sbProcessUrl.toString()); // testurl
-            PostMethod get = new PostMethod((CommonData.satServer + "/ws/aloc/estimate?") + "gc=" + URLEncoder.encode(String.valueOf(groupCount.getValue()), "UTF-8") + "&envlist=" + URLEncoder.encode(sbenvsel.toString(), "UTF-8"));
+            PostMethod get = new PostMethod((CommonData.getSatServer() + "/ws/aloc/estimate?") + "gc=" + URLEncoder.encode(String.valueOf(groupCount.getValue()), StringConstants.UTF_8) + "&envlist=" + URLEncoder.encode(sbenvsel, StringConstants.UTF_8));
             String area;
             if (sa.getMapLayer() != null && sa.getMapLayer().getEnvelope() != null) {
-                area = "ENVELOPE(" + sa.getMapLayer().getEnvelope() + ")";
+                area = StringConstants.ENVELOPE + "(" + sa.getMapLayer().getEnvelope() + ")";
             } else {
                 area = sa.getWkt();
             }
-            get.addParameter("area", area);
-            get.addRequestHeader("Accept", "text/plain");
+            get.addParameter(StringConstants.AREA, area);
+            get.addRequestHeader(StringConstants.ACCEPT, StringConstants.TEXT_PLAIN);
 
-            int result = client.executeMethod(get);
+            client.executeMethod(get);
             String estimate = get.getResponseBodyAsString();
 
             return Long.valueOf(estimate);
 
         } catch (Exception e) {
-            logger.error("Unable to get estimates", e);
+            LOGGER.error("Unable to get estimates", e);
         }
 
         return -1;
@@ -158,53 +155,53 @@ public class ALOCComposer extends ToolComposer {
             case 4:
                 tToolName.setFocus(true);
                 break;
+            default:
+                LOGGER.error("invalid step for ALOCComposer: " + currentStep);
         }
     }
 
-    @Override
     public void loadMap(Event event) {
         //get job inputs
         try {
             for (String s : getJob().split(";")) {
                 if (s.startsWith("gc")) {
-                    //layerLabel = "Classification #" + generation_count + " - " + s.split(":")[1] + " groups";
                     layerLabel = tToolName.getValue();
-                    generation_count++;
+                    generationCount++;
                     break;
                 }
             }
         } catch (Exception e) {
-            logger.error("error getting ALOC job info", e);
+            LOGGER.error("error getting ALOC job info", e);
         }
 
         if (layerLabel == null) {
-            layerLabel = "My Classification " + generation_count;
-            generation_count++;
+            layerLabel = "My Classification " + generationCount;
+            generationCount++;
         }
 
-        String mapurl = CommonData.geoServer + "/wms?service=WMS&version=1.1.0&request=GetMap&layers=ALA:aloc_" + pid + "&FORMAT=image%2Fpng";
-        String legendurl = CommonData.geoServer
+        String mapurl = CommonData.getGeoServer() + "/wms?service=WMS&version=1.1.0&request=GetMap&layers=ALA:aloc_" + pid + "&FORMAT=image%2Fpng";
+        String legendurl = CommonData.getGeoServer()
                 + "/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=10&HEIGHT=1"
                 + "&LAYER=ALA:aloc_" + pid;
-        logger.debug(legendurl);
+        LOGGER.debug(legendurl);
         legendPath = legendurl;
-        getMapComposer().addWMSLayer("aloc_" + pid, layerLabel, mapurl, (float) 0.5, null, legendurl, LayerUtilities.ALOC, null, null);
+        getMapComposer().addWMSLayer("aloc_" + pid, layerLabel, mapurl, (float) 0.5, null, legendurl, LayerUtilitiesImpl.ALOC, null, null);
         MapLayer mapLayer = getMapComposer().getMapLayer("aloc_" + pid);
         if (mapLayer != null) {
             mapLayer.setPid(pid);
             WMSStyle style = new WMSStyle();
-            style.setName("Default");
+            style.setName(StringConstants.DEFAULT);
             style.setDescription("Default style");
-            style.setTitle("Default");
+            style.setTitle(StringConstants.DEFAULT);
             style.setLegendUri(legendurl);
 
-            logger.debug("legend:" + legendPath);
+            LOGGER.debug("legend:" + legendPath);
             mapLayer.addStyle(style);
             mapLayer.setSelectedStyleIndex(1);
 
             MapLayerMetadata md = mapLayer.getMapLayerMetadata();
 
-            String infoUrl = CommonData.satServer + "/output/aloc/" + pid + "/classification.html" + "\nClassification output\npid:" + pid;
+            String infoUrl = CommonData.getSatServer() + "/output/aloc/" + pid + "/classification.html" + "\nClassification output\npid:" + pid;
             md.setMoreInfo(infoUrl);
             md.setId(Long.valueOf(pid));
 
@@ -212,15 +209,11 @@ public class ALOCComposer extends ToolComposer {
 
             try {
                 // set off the download as well
-                String fileUrl = CommonData.satServer + "/ws/download/" + pid;
-                Filedownload.save(new URL(fileUrl).openStream(), "application/zip", tToolName.getValue().replaceAll(" ", "_") + ".zip"); // "ALA_Prediction_"+pid+".zip"
+                String fileUrl = CommonData.getSatServer() + "/ws/download/" + pid;
+                Filedownload.save(new URL(fileUrl).openStream(), "application/zip", tToolName.getValue().replaceAll(" ", "_") + ".zip");
             } catch (Exception ex) {
-                logger.error("Error generating download for classification model:", ex);
+                LOGGER.error("Error generating download for classification model:", ex);
             }
-
-            //Events.echoEvent("openUrl", this.getMapComposer(), infoUrl);
-
-            //perform intersection on user uploaded layers so you can facet on this layer
         }
 
         this.detach();
@@ -229,28 +222,26 @@ public class ALOCComposer extends ToolComposer {
     String getJob() {
         try {
             StringBuilder sbProcessUrl = new StringBuilder();
-            sbProcessUrl.append(CommonData.satServer + "/ws/jobs/").append("inputs").append("?pid=").append(pid);
+            sbProcessUrl.append(CommonData.getSatServer()).append("/ws/jobs/").append("inputs").append("?pid=").append(pid);
 
-            logger.debug(sbProcessUrl.toString());
+            LOGGER.debug(sbProcessUrl.toString());
             HttpClient client = new HttpClient();
             GetMethod get = new GetMethod(sbProcessUrl.toString());
 
-            get.addRequestHeader("Accept", "text/plain");
+            get.addRequestHeader(StringConstants.ACCEPT, StringConstants.TEXT_PLAIN);
 
-            int result = client.executeMethod(get);
+            client.executeMethod(get);
             String slist = get.getResponseBodyAsString();
-            logger.debug(slist);
+            LOGGER.debug(slist);
             return slist;
         } catch (Exception e) {
-            logger.error("error getting gob info pid=" + pid, e);
+            LOGGER.error("error getting gob info pid=" + pid, e);
         }
         return "";
     }
 
     public boolean runclassification() {
         try {
-
-            //layerLabel = "Classification #" + generation_count + " - " + groupCount.getValue() + " groups";
             layerLabel = tToolName.getValue();
 
             String sbenvsel = getSelectedLayers();
@@ -261,12 +252,10 @@ public class ALOCComposer extends ToolComposer {
 
             if (groupCount.getValue() <= 1 || groupCount.getValue() > 200) {
                 getMapComposer().showMessage("Please enter the number of groups to generate (2 to 200) in step 2.");
-                //highlight step 2
-//                tabboxclassification.setSelectedIndex(1);
                 return false;
             }
 
-            SelectedArea sa = getSelectedArea();//getMapComposer().getSelectionArea();
+            SelectedArea sa = getSelectedArea();
 
             //estimate analysis size in bytes
             double[][] bbox = null;
@@ -287,46 +276,46 @@ public class ALOCComposer extends ToolComposer {
 
             long cellsInBBox = (long) ((bbox[1][0] - bbox[0][0]) / 0.01 * (bbox[1][1] - bbox[0][1]) / 0.01);
             long size = (groupCount.getValue() + sbenvsel.split(":").length + 2) * cellsInBBox * 4;
-            logger.debug("ALOC estimate size in MB, cells=" + cellsInBBox
+            LOGGER.debug("ALOC estimate size in MB, cells=" + cellsInBBox
                     + ", bbox=" + bbox[0][0] + "," + bbox[0][1] + "," + bbox[1][0] + "," + bbox[1][1]
                     + ", groups=" + groupCount.getValue()
                     + ", layers=" + sbenvsel.split(":").length
                     + ", size=" + size / 1024 / 1024
-                    + ", max size=" + CommonData.settings.getProperty("aloc_size_limit_in_mb"));
-            if (size / 1024 / 1024 > Integer.parseInt(CommonData.settings.getProperty("aloc_size_limit_in_mb"))) {
+                    + ", max size=" + CommonData.getSettings().getProperty("aloc_size_limit_in_mb"));
+            if (size / 1024 / 1024 > Integer.parseInt(CommonData.getSettings().getProperty("aloc_size_limit_in_mb"))) {
                 getMapComposer().showMessage("Analysis is too large.  Reduce the number of groups, number of layers or area.", this);
                 return false;
             }
 
             HttpClient client = new HttpClient();
-            //GetMethod get = new GetMethod(sbProcessUrl.toString()); // testurl
-            PostMethod get = new PostMethod((CommonData.satServer + "/ws/aloc?") + "gc=" + URLEncoder.encode(String.valueOf(groupCount.getValue()), "UTF-8") + "&envlist=" + URLEncoder.encode(sbenvsel.toString(), "UTF-8"));
+
+            PostMethod get = new PostMethod((CommonData.getSatServer() + "/ws/aloc?") + "gc=" + URLEncoder.encode(String.valueOf(groupCount.getValue()), StringConstants.UTF_8) + "&envlist=" + URLEncoder.encode(sbenvsel, StringConstants.UTF_8));
             String area;
             if (sa.getMapLayer() != null && sa.getMapLayer().getEnvelope() != null) {
-                area = "ENVELOPE(" + (String) sa.getMapLayer().getEnvelope() + ")";
+                area = StringConstants.ENVELOPE + "(" + sa.getMapLayer().getEnvelope() + ")";
             } else {
                 area = sa.getWkt();
             }
-            get.addParameter("area", area);
-            get.addRequestHeader("Accept", "text/plain");
+            get.addParameter(StringConstants.AREA, area);
+            get.addRequestHeader(StringConstants.ACCEPT, StringConstants.TEXT_PLAIN);
 
-            int result = client.executeMethod(get);
+            client.executeMethod(get);
             String slist = get.getResponseBodyAsString();
 
-            generation_count++;
+            generationCount++;
             pid = slist;
 
-            legendPath = "/WEB-INF/zul/legend/LayerLegendClassification.zul?pid=" + pid + "&layer=" + URLEncoder.encode(layerLabel, "UTF-8");
+            legendPath = "/WEB-INF/zul/legend/LayerLegendClassification.zul?pid=" + pid + "&layer=" + URLEncoder.encode(layerLabel, StringConstants.UTF_8);
 
             try {
-                remoteLogger.logMapAnalysis(tToolName.getValue(), "Tool - Classification", area, "", sbenvsel.toString(), pid, "gc: " + groupCount.getValue(), "STARTED");
+                remoteLogger.logMapAnalysis(tToolName.getValue(), "Tool - Classification", area, "", sbenvsel, pid, "gc: " + groupCount.getValue(), StringConstants.STARTED);
             } catch (Exception e) {
-                logger.error("error with remote logger", e);
+                LOGGER.error("error with remote logger", e);
             }
 
             ProgressController window = (ProgressController) Executions.createComponents("WEB-INF/zul/progress/AnalysisProgress.zul", getMapComposer(), null);
-            window.parent = this;
-            window.start(pid, "Classification");
+            window.setParentWindow(this);
+            window.start(pid, StringConstants.CLASSIFICATION);
             window.doModal();
 
             this.setVisible(false);
@@ -334,7 +323,7 @@ public class ALOCComposer extends ToolComposer {
             return true;
 
         } catch (Exception ex) {
-            logger.error("error opening AnalysisProgress.zul for classification: " + pid, ex);
+            LOGGER.error("error opening AnalysisProgress.zul for classification: " + pid, ex);
             getMapComposer().showMessage("Unknown error.", this);
         }
 
