@@ -1,11 +1,13 @@
 package au.org.emii.portal.javascript;
 
-import au.org.ala.spatial.data.BiocacheQuery;
-import au.org.ala.spatial.data.Query;
+import au.org.ala.spatial.StringConstants;
+import au.org.ala.spatial.util.BiocacheQuery;
 import au.org.ala.spatial.util.CommonData;
+import au.org.ala.spatial.util.Query;
 import au.org.emii.portal.menu.MapLayer;
 import au.org.emii.portal.session.PortalSession;
 import au.org.emii.portal.util.LayerUtilities;
+import au.org.emii.portal.util.LayerUtilitiesImpl;
 import au.org.emii.portal.util.Validate;
 import au.org.emii.portal.value.BoundingBox;
 import org.apache.commons.lang.StringEscapeUtils;
@@ -17,7 +19,6 @@ import org.zkoss.zk.ui.util.Clients;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.List;
-import java.util.Properties;
 
 /**
  * Support for generating javascript for use with an openlayers map held within
@@ -32,12 +33,19 @@ import java.util.Properties;
  */
 public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
 
+    public static final String SAFE_TO_PROCEED_CLOSE = "} ";
+    public static final String SAFE_TO_PROCEED_OPEN = "if (safeToProceed) { ";
+    private static final Logger LOGGER = Logger.getLogger(OpenLayersJavascriptImpl.class);
     private LayerUtilities layerUtilities = null;
-    protected final static Logger logger = Logger.getLogger(OpenLayersJavascriptImpl.class);
+    private String additionalScript = "";
 
     @Override
-    public String wrapWithSafeToProceed(String script) {
-        return safeToProceedOpen + script + safeToProceedClose;
+    public String getIFrameReferences() {
+        return "var safeToProceed=true; " + "if (mapLayers == null) {" + "\tmapLayers = window.mapFrame.mapLayers; " + "} " + "if (map == null) {" + "\tmap = window.mapFrame.map; " + "} " + "if (OpenLayers == null) {" + "\tOpenLayers = window.mapFrame.OpenLayers; " + "} " + "if (baseLayers == null) {" + "\tbaseLayers = window.mapFrame.baseLayers; " + "} " + "if (currentBaseLayer == null) {" + "\tcurrentBaseLayer = window.mapFrame.currentBaseLayer; " + "} " + "if (currentBaseLayer == null) {" + "\tcurrentBaseLayer = window.mapFrame.currentBaseLayer; " + "} " + "if (registerLayer == null) {" + "\tregisterLayer = window.mapFrame.registerLayer; " + "} " + "if (\t(mapLayers == null) || " + "\t\t(map == null) || " + "\t\t(OpenLayers == null) || " + "\t\t(baseLayers == null)) { " + "\tsafeToProceed=false;" + "\talert(\'map subsystem is not fully loaded yet - this operation will fail\');" + "} ";
+    }
+
+    private String wrapWithSafeToProceed(String script) {
+        return SAFE_TO_PROCEED_OPEN + script + SAFE_TO_PROCEED_CLOSE;
     }
 
     /*
@@ -49,98 +57,32 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
     }
 
     @Override
-    public String initialiseMap() {
-        return "window.mapFrame.buildMapReal(); ";
-    }
-
-    @Override
-    public void initialiseMapNow() {
-        execute(initialiseMap());
-    }
-
-    @Override
-    public void initialiseTransectDrawing(MapLayer mapLayer) {
-        String script = "window.mapFrame.addLineDrawingLayer('" + mapLayer.getNameJS() + "','" + mapLayer.getLayer() + "','" + mapLayer.getUriJS() + "')";
-        execute(script); // Safe to proceed - map loaded way beforehand
-
+    public String initialiseMap(BoundingBox boundingBox) {
+        return "window.mapFrame.buildMapReal("
+                + Math.max(-180, boundingBox.getMinLongitude()) + ", "
+                + Math.max(-85, boundingBox.getMinLatitude()) + ", "
+                + Math.min(180, boundingBox.getMaxLongitude()) + ", "
+                + Math.min(85, boundingBox.getMaxLatitude()) + "); ";
     }
 
     @Override
     public String addPolygonDrawingTool() {
-        String script = "window.mapFrame.addPolygonDrawingTool()";
-        return script;
+        return "window.mapFrame.addPolygonDrawingTool()";
     }
 
     @Override
     public String addRadiusDrawingTool() {
-        String script = "window.mapFrame.addRadiusDrawingTool()";
-        return script;
+        return "window.mapFrame.addRadiusDrawingTool()";
     }
 
     @Override
     public String addFeatureSelectionTool() {
-        String script = "window.mapFrame.addFeatureSelectionTool()";
-        return script;
-    }
-
-    @Override
-    public void addPolygonDrawingToolSampling() {
-        String script = "window.mapFrame.addPolygonDrawingToolSampling()";
-        execute(script);
-    }
-
-    @Override
-    public void addPolygonDrawingToolALOC() {
-        String script = "window.mapFrame.addPolygonDrawingToolALOC()";
-        execute(script);
-    }
-
-    @Override
-    public void addPolygonDrawingToolFiltering() {
-        String script = "window.mapFrame.addPolygonDrawingToolFiltering()";
-        execute(script);
-    }
-
-    @Override
-    public void removePolygonSampling() {
-        String script = "window.mapFrame.removePolygonSampling()";
-        execute(script);
-    }
-
-    @Override
-    public void removePolygonALOC() {
-        String script = "window.mapFrame.removePolygonALOC()";
-        execute(script);
-    }
-
-    @Override
-    public void removePolygonFiltering() {
-        String script = "window.mapFrame.removePolygonFiltering()";
-        execute(script);
-    }
-
-    @Override
-    public void removeAreaSelection() {
-        String script = "window.mapFrame.removeAreaSelection()";
-        execute(script);
+        return "window.mapFrame.addFeatureSelectionTool()";
     }
 
     @Override
     public String addBoxDrawingTool() {
-        String script = "window.mapFrame.addBoxDrawingTool()";
-        return script;
-    }
-
-    @Override
-    public void addGeoJsonLayer(String url) {
-        String script = "window.mapFrame.addJsonFeatureToMap('" + url + "')";
-        execute(script);
-    }
-
-    @Override
-    public void addFeatureSelection() {
-        String script = "window.mapFrame.setFeatureSelect();";
-        execute(script);
+        return "window.mapFrame.addBoxDrawingTool()";
     }
 
     @Override
@@ -151,7 +93,7 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
 
     @Override
     public String zoomGeoJsonExtent(MapLayer ml) {
-        String script = "";
+        String script;
         if (ml.getMapLayerMetadata().getBboxString() != null) {
             // cluster
             script = "window.mapFrame.map.zoomToExtent(new OpenLayers.Bounds.fromString('" + ml.getMapLayerMetadata().getBboxString()
@@ -166,20 +108,13 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
 
     @Override
     public void zoomLayerExtent(MapLayer ml) {
-        String script;
+        String script = "";
         /* if map boundingbox is defined use it to zoom */
-
         if (ml.getMapLayerMetadata().getBboxString() != null) {
             script = "map.zoomToExtent(new OpenLayers.Bounds(" + ml.getMapLayerMetadata().getBboxString() + ")" + ".transform(" + "  new OpenLayers.Projection('EPSG:4326'),"
                     + "  map.getProjectionObject()));";
-        } else {
-
-            script = "window.mapFrame.loadBaseMap();";
-
-            //script = "window.mapFrame.zoomBoundsLayer('" + ml.getName() + "')";
+            execute(script);
         }
-
-        execute(script);
     }
 
     @Override
@@ -202,12 +137,11 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
      *
      * @return
      */
-    @Override
-    public String removeMapLayer(MapLayer layer, boolean recursive) {
+    private String removeMapLayer(MapLayer layer, boolean recursive) {
         /*
          * Safe to assume always dealing with the mapLayers associative array
          * here because the user doesn't have control over the base layers (?)
-         * 
+         *
          * It is possible that a user has already removed a layer by unchecking
          * the display layer checkbox - in this case we must do nothing here or
          * the user will get a script error because the layer has already been
@@ -218,12 +152,12 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
         // if we aren't displaying the layer atm, we don't need to remove it...
         // the isDisplayed() flag can
         if (layer.isDisplayed()) {
-            script.append("if (mapLayers['").append(layer.getUniqueIdJS()).append("'] != null) { ").append("	window.mapFrame.removeFromSelectControl('").append(layer.getNameJS()).append("'); ").append("	map.removeLayer(mapLayers['").append(layer.getUniqueIdJS()).append("']); ").append("	mapLayers['").append(layer.getUniqueIdJS()).append("'] = null; ").append("} ");
+            script.append("if (mapLayers['").append(layer.getUniqueIdJS()).append("'] != null) { ").append(" window.mapFrame.removeFromSelectControl('").append(layer.getNameJS()).append("'); ").append(" map.removeLayer(mapLayers['").append(layer.getUniqueIdJS()).append("']); ").append(" mapLayers['").append(layer.getUniqueIdJS()).append("'] = null; ").append("} ");
             layer.setDisplayed(false);
         }
         if (recursive) {
             for (MapLayer child : layer.getChildren()) {
-                script.append(removeMapLayer(child, recursive));
+                script.append(removeMapLayer(child, true));
             }
         }
 
@@ -235,7 +169,7 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
      */
     @Override
     public void removeMapLayerNow(MapLayer mapLayer) {
-        execute(iFrameReferences + removeMapLayer(mapLayer) + getAdditionalScript());
+        execute(getIFrameReferences() + removeMapLayer(mapLayer) + getAdditionalScript());
     }
 
     /**
@@ -267,36 +201,28 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
 
     @Override
     public void updateMapLayerIndexesNow(List<MapLayer> activeLayers) {
-        execute(iFrameReferences + updateMapLayerIndexes(activeLayers));
+        execute(getIFrameReferences() + updateMapLayerIndexes(activeLayers));
     }
 
-    @Override
-    public void zoomToBoundingBoxNow(BoundingBox boundingBox) {
-        execute(iFrameReferences + zoomToBoundingBox(boundingBox));
-    }
-
-    @Override
     public String zoomToBoundingBox(BoundingBox boundingBox) {
-        String script = "var mapObj = window.frames.mapFrame.map;" + "map.zoomToExtent(" + "	(new OpenLayers.Bounds(" + Math.max(-180, boundingBox.getMinLongitude()) + ", "
+        String script = "var mapObj = window.frames.mapFrame.map;" + "map.zoomToExtent(" + " (new OpenLayers.Bounds(" + Math.max(-180, boundingBox.getMinLongitude()) + ", "
                 + Math.max(-85, boundingBox.getMinLatitude()) + ", " + Math.min(180, boundingBox.getMaxLongitude()) + ", " + Math.min(85, boundingBox.getMaxLatitude())
                 + ")).transform(mapObj.displayProjection, mapObj.projection) " + "); ";
         return wrapWithSafeToProceed(script);
     }
 
-    @Override
     public void zoomToBoundingBoxNow(BoundingBox boundingBox, boolean closest) {
-        execute(iFrameReferences + zoomToBoundingBox(boundingBox, closest));
+        execute(getIFrameReferences() + zoomToBoundingBox(boundingBox, closest));
     }
 
     @Override
     public String zoomToBoundingBox(BoundingBox boundingBox, boolean closest) {
-        String script = "var mapObj = window.frames.mapFrame.map;" + "map.zoomToExtent(" + "	(new OpenLayers.Bounds(" + Math.max(-180, boundingBox.getMinLongitude()) + ", "
+        String script = "var mapObj = window.frames.mapFrame.map;" + "map.zoomToExtent(" + " (new OpenLayers.Bounds(" + Math.max(-180, boundingBox.getMinLongitude()) + ", "
                 + Math.max(-85, boundingBox.getMinLatitude()) + ", " + Math.min(180, boundingBox.getMaxLongitude()) + ", " + Math.min(85, boundingBox.getMaxLatitude())
                 + ")).transform(mapObj.displayProjection, mapObj.projection) " + ", " + closest + "); ";
         return wrapWithSafeToProceed(script);
     }
 
-    @Override
     public String activateMapLayer(MapLayer mapLayer) {
         return activateMapLayer(mapLayer, true, false);
     }
@@ -312,60 +238,49 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
     @Override
     public String activateMapLayer(MapLayer mapLayer, boolean recursive, boolean alternativeScript) {
         String associativeArray;
-        boolean okToAddLayer;
+
         if (mapLayer.isBaseLayer()) {
-            associativeArray = "baseLayers";
+            associativeArray = StringConstants.BASE_LAYERS;
         } else {
-            associativeArray = "mapLayers";
+            associativeArray = StringConstants.MAP_LAYERS;
         }
 
         StringBuilder script = new StringBuilder("if (" + associativeArray + "['" + mapLayer.getUniqueIdJS() + "'] == null) { ");
 
         switch (mapLayer.getType()) {
 
-            case LayerUtilities.KML:
-                script.append(defineKMLMapLayer(mapLayer));
-                okToAddLayer = true;
-                break;
-            case LayerUtilities.GEOJSON:
-                script.append(defineGeoJSONMapLayer(mapLayer));
-                okToAddLayer = true;
-                break;
-            case LayerUtilities.WKT:
+            case LayerUtilitiesImpl.WKT:
                 script.append(defineWKTMapLayer(mapLayer));
-                okToAddLayer = true;
                 break;
             default:
                 script.append(defineWMSMapLayer(mapLayer));
-                okToAddLayer = true;
         }
 
         // close off the if statement
         script.append("} ");
 
         // only attempt to add a layer to the map if the type is supported
-        if (okToAddLayer) {
-            script.append("	if(").append(associativeArray).append("['").append(mapLayer.getUniqueIdJS()).append("'] != undefined) map.addLayer(").append(associativeArray).append("['").append(mapLayer.getUniqueIdJS()).append("']); ");
 
-            /*
-             * for base layers, we must also call setBaseLayer() now the map
-             * knows about the layer
-             */
-            if (mapLayer.isBaseLayer()) {
-                // remove previous baselayer (if any) to prevent supurious
-                // requests
-                script.append("if (currentBaseLayer != null) { " + "	map.removeLayer( ").append(associativeArray).append("[currentBaseLayer]); ").append(associativeArray).append("[currentBaseLayer] = null; ").append("} ").append("currentBaseLayer='").append(mapLayer.getUniqueIdJS()).append("'; ").append("map.setBaseLayer(").append(associativeArray).append("[currentBaseLayer]); ");
-            }
+        script.append(" if(").append(associativeArray).append("['").append(mapLayer.getUniqueIdJS()).append("'] != undefined) map.addLayer(").append(associativeArray).append("['").append(mapLayer.getUniqueIdJS()).append("']); ");
 
-            // add all the vector layers to be the selectable list
-            // script.append("window.mapFrame.setVectorLayersSelectable();");
-            mapLayer.setDisplayed(true);
+        /*
+         * for base layers, we must also call setBaseLayer() now the map
+         * knows about the layer
+         */
+        if (mapLayer.isBaseLayer()) {
+            // remove previous baselayer (if any) to prevent supurious
+            // requests
+            script.append("if (currentBaseLayer != null) { " + " map.removeLayer( ").append(associativeArray).append("[currentBaseLayer]); ").append(associativeArray).append("[currentBaseLayer] = null; ").append("} ").append("currentBaseLayer='").append(mapLayer.getUniqueIdJS()).append("'; ").append("map.setBaseLayer(").append(associativeArray).append("[currentBaseLayer]); ");
         }
+
+        // add all the vector layers to be the selectable list
+
+        mapLayer.setDisplayed(true);
 
         if (recursive) {
             for (MapLayer child : mapLayer.getChildren()) {
-                if (child.getHighlightState() == null || child.getHighlightState().equals("show")) {
-                    script.append(activateMapLayer(child, recursive, alternativeScript));
+                if (child.getHighlightState() == null || "show".equals(child.getHighlightState())) {
+                    script.append(activateMapLayer(child, true, alternativeScript));
                 }
             }
         }
@@ -373,13 +288,13 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
         return wrapWithSafeToProceed(getAdditionalScript() + script.toString());
     }
 
-    @Override
     public String defineKMLMapLayer(MapLayer layer) {
         /*
          * can't have a GeoRSS baselayer so we don't need to decide where to
          * store the layer definition
          */
-        String script = "	mapLayers['" + layer.getUniqueIdJS() + "'] = window.mapFrame.loadKmlFile('" + layer.getNameJS() + "','" + layer.getUriJS() + "');" + // register
+        String script = " mapLayers['" + layer.getUniqueIdJS() + "'] = window.mapFrame.loadKmlFile('" + layer.getNameJS() + "','" + layer.getUriJS() + "');" +
+                // register
                 // for
                 // loading
                 // images...
@@ -402,7 +317,6 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
         execute(script);
     }
 
-    @Override
     public String defineWKTMapLayer(MapLayer layer) {
         String script = "" + "var vector_layer = window.mapFrame.addWKTFeatureToMap('" + layer.getWKT() + "','" + layer.getNameJS() + "','" + layer.getEnvColour() + "', " + layer.getOpacity() + ");"
                 + "mapLayers['" + layer.getUniqueIdJS() + "'] = vector_layer;";
@@ -412,28 +326,6 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
         }
 
         script += "registerLayer(mapLayers['" + layer.getUniqueIdJS() + "']);";
-
-        return wrapWithSafeToProceed(script);
-    }
-
-    @Override
-    public String defineGeoJSONMapLayer(MapLayer layer) {
-        /*
-         * can't have a GeoJSON baselayer so we don't need to decide where to
-         * store the layer definition
-         */
-
-        String script;
-        if (layer.getGeoJSON() != null && layer.getGeoJSON().length() > 0) {
-            script = "" + "var vector_layer = window.mapFrame.addJsonFeatureToMap('" + layer.getGeoJSON() + "','" + layer.getNameJS() + "','" + layer.getEnvColour() + "'," + layer.getSizeVal() + ", "
-                    + layer.getOpacity() + "," + layer.getSizeUncertain() + ");" + "mapLayers['" + layer.getUniqueIdJS() + "'] = vector_layer;" + "registerLayer(mapLayers['" + layer.getUniqueIdJS()
-                    + "']);";
-        } else {
-            script = "window.mapFrame.addJsonUrlToMap('" + layer.getUri() + "','" + layer.getNameJS() + "','" + layer.getEnvColour() + "'," + layer.getSizeVal() + ", " + layer.getOpacity() + ","
-                    + layer.getSizeUncertain() + ");";
-        }
-
-        logger.debug("defineGeoJSONMapLayer: " + script);
 
         return wrapWithSafeToProceed(script);
     }
@@ -449,7 +341,7 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
         String version = layerUtilities.getWmsVersion(layer);
         String versionJS = "";
         if (version != null) {
-            if (version.equals("1.3.0")) {
+            if ("1.3.0".equals(version)) {
                 versionJS = "version: '1.3.0', " + "crs: 'epsg:4326' ";
             } else {
                 versionJS = "version: '" + version + "' ";
@@ -468,15 +360,14 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
      * @param layer
      * @return
      */
-    @Override
     public String defineWMSMapLayer(MapLayer layer) {
-        String associativeArray = null;
+        String associativeArray;
         String gutter = "0";
         String params = "";
         if (layer.isBaseLayer()) {
-            associativeArray = "baseLayers";
+            associativeArray = StringConstants.BASE_LAYERS;
         } else {
-            associativeArray = "mapLayers";
+            associativeArray = StringConstants.MAP_LAYERS;
         }
         if (!Validate.empty(layer.getCql())) {
             params = "CQL_FILTER: '" + layer.getCqlJS() + "' ";
@@ -484,13 +375,13 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
         }
         if (!Validate.empty(layer.getEnvParams())) {
             try {
-                params += "env: '" + URLEncoder.encode(layer.getEnvParams().replace("'", "\\'"), "UTF-8") + "', ";
+                params += "env: '" + URLEncoder.encode(layer.getEnvParams().replace("'", "\\'"), StringConstants.UTF_8) + "', ";
             } catch (UnsupportedEncodingException e) {
-                logger.error("failed to encode env params : " + layer.getEnvParams().replace("'", "\\'"), e);
+                LOGGER.error("failed to encode env params : " + layer.getEnvParams().replace("'", "\\'"), e);
             }
         }
 
-        String dynamic_style = "";
+        String dynamicStyle = "";
         if (layer.isPolygonLayer()) {
             String colour = Integer.toHexString((0xFF0000 & (layer.getRedVal() << 16)) | (0x00FF00 & layer.getGreenVal() << 8) | (0x0000FF & layer.getBlueVal()));
             while (colour.length() < 6) {
@@ -519,35 +410,28 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
                         + "</PolygonSymbolizer></Rule></FeatureTypeStyle></UserStyle></NamedLayer></StyledLayerDescriptor>";
             }
             try {
-                dynamic_style = "&sld_body=" + URLEncoder.encode(filter, "UTF-8");
+                dynamicStyle = "&sld_body=" + URLEncoder.encode(filter, StringConstants.UTF_8);
             } catch (Exception e) {
-                logger.debug("invalid filter sld", e);
+                LOGGER.debug("invalid filter sld", e);
             }
         }
 
-        String script = "	" + associativeArray + "['" + layer.getUniqueIdJS() + "'] = new OpenLayers.Layer.WMS(" + "		'"
-                + layer.getNameJS() + "', " + "		'"
-                + layer.getUriJS().replace("wms?service=WMS&version=1.1.0&request=GetMap&", "wms\\/reflect?") + dynamic_style + "', " + "		{"
-                + ((layer.getSelectedStyleNameJS().equals("Default")) ? "" : "			styles: '" + layer.getSelectedStyleNameJS() + "', ")
-                + "			layers: '" + layer.getLayerJS() + "', " + "			format: '"
-                + layer.getImageFormat() + "', " + "         srs: 'epsg:3857', " + "			transparent: " + (!layer.isBaseLayer()) + ", " +
-                "			" + params + wmsVersionDeclaration(layer) + // ","
-
-                "		}, " + "		{ "
-                // + "             " + "maxExtent: (new OpenLayers.Bounds(" +
-                // bbox.get(0) + "," + bbox.get(1) + "," + bbox.get(2) + "," +
-                // bbox.get(3) +
-                // ")).transform(new OpenLayers.Projection('EPSG:4326'),map.getProjectionObject()),"
-                + "			isBaseLayer: " + layer.isBaseLayer() + ", " + "			opacity: " + layer.getOpacity() + ", " + "			queryable: true, "
-                // + "			buffer: " +
-                // settingsSupplementary.getValue("openlayers_tile_buffer") +
-                // ", "
-                + "			gutter: " + gutter + ", " + "			wrapDateLine: true" // +
-                + "		}  " + "	); " + // decorate with getFeatureInfoBuffer field
+        String script = " " + associativeArray + "['" + layer.getUniqueIdJS() + "'] = new OpenLayers.Layer.WMS(" + "  '"
+                + layer.getNameJS() + "', " + "  '"
+                + layer.getUriJS().replace("wms?service=WMS&version=1.1.0&request=GetMap&", "wms\\/reflect?") + dynamicStyle + "', " + "  {"
+                + ((StringConstants.DEFAULT.equals(layer.getSelectedStyleNameJS())) ? "" : "   styles: '" + layer.getSelectedStyleNameJS() + "', ")
+                + "   layers: '" + layer.getLayerJS() + "', " + "   format: '"
+                + layer.getImageFormat() + "', " + "         srs: 'epsg:3857', " + "   transparent: " + (!layer.isBaseLayer()) + ", " +
+                "   " + params + wmsVersionDeclaration(layer) +
+                "  }, " + "  { "
+                + "   isBaseLayer: " + layer.isBaseLayer() + ", " + "   opacity: " + layer.getOpacity() + ", " + "   queryable: true, "
+                + "   gutter: " + gutter + ", " + "   wrapDateLine: true"
+                + "  }  " + " ); " +
+                // decorate with getFeatureInfoBuffer field
                 // - do not set buffer
                 // it's used to set a margin of cached
                 // tiles around the viewport!!
-                associativeArray + "['" + layer.getUniqueIdJS() + "']" + ".getFeatureInfoBuffer =" + CommonData.settings.getProperty("get_feature_info_buffer") + "; ";
+                associativeArray + "['" + layer.getUniqueIdJS() + "']" + ".getFeatureInfoBuffer =" + CommonData.getSettings().getProperty("get_feature_info_buffer") + "; ";
         // add ws and bs urls for species layers
         if (layer.getSpeciesQuery() != null) {
             Query q = layer.getSpeciesQuery();
@@ -557,7 +441,7 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
                     script += associativeArray + "['" + layer.getUniqueIdJS() + "']" + ".ws ='" + StringEscapeUtils.escapeJavaScript(bq.getWS()) + "'; " + associativeArray + "['"
                             + layer.getUniqueIdJS() + "']" + ".bs ='" + StringEscapeUtils.escapeJavaScript(bq.getBS()) + "'; ";
                 } catch (Exception e) {
-                    logger.error("error escaping for JS: " + bq.getBS(), e);
+                    LOGGER.error("error escaping for JS: " + bq.getBS(), e);
                 }
             }
             if (q.flagRecordCount() > 0) {
@@ -582,7 +466,7 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
      */
     @Override
     public void activateMapLayerNow(MapLayer layer) {
-        execute(iFrameReferences + getAdditionalScript() + activateMapLayer(layer));
+        execute(getIFrameReferences() + getAdditionalScript() + activateMapLayer(layer));
     }
 
     /**
@@ -612,9 +496,8 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
      *
      * @param layers
      */
-    @Override
     public void activateMapLayersNow(List<MapLayer> layers) {
-        execute(iFrameReferences + activateMapLayers(layers));
+        execute(getIFrameReferences() + activateMapLayers(layers));
     }
 
     /**
@@ -624,7 +507,6 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
      * @param percentage
      * @return
      */
-    @Override
     public String setMapLayerOpacity(MapLayer mapLayer, float percentage) {
 
         /*
@@ -636,9 +518,8 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
         return wrapWithSafeToProceed(script);
     }
 
-    @Override
     public void setMapLayerOpacityNow(MapLayer mapLayer, float percentage) {
-        execute(iFrameReferences + setMapLayerOpacity(mapLayer, percentage));
+        execute(getIFrameReferences() + setMapLayerOpacity(mapLayer, percentage));
     }
 
     /**
@@ -650,13 +531,7 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
      */
     @Override
     public String reloadMapLayer(MapLayer mapLayer) {
-        if (mapLayer.getGeoJSON() == null && mapLayer.getType() == LayerUtilities.GEOJSON) {
-            return removeMapLayer(mapLayer) + activateMapLayer(mapLayer, false, true);
-        } else {
-            return removeMapLayer(mapLayer) + activateMapLayer(mapLayer);
-        }
-
-    }
+        return removeMapLayer(mapLayer) + activateMapLayer(mapLayer);    }
 
     /**
      * Immediate execution of reloadMapLayer
@@ -665,7 +540,7 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
      */
     @Override
     public void reloadMapLayerNow(MapLayer mapLayer) {
-        execute(iFrameReferences + reloadMapLayer(mapLayer));
+        execute(getIFrameReferences() + reloadMapLayer(mapLayer));
     }
 
     /**
@@ -676,19 +551,19 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
     @Override
     public void execute(String script) {
         if (mapLoaded()) {
-            script = minify(script);
-            logger.debug("exec javascript: " + script);
-            Clients.evalJavaScript(script);
+            String minScript = minify(script);
+            LOGGER.debug("exec javascript: " + minScript);
+            Clients.evalJavaScript(minScript);
         } else {
-            logger.debug("refused to execute javascript - map not loaded");
+            LOGGER.debug("refused to execute javascript - map not loaded");
         }
     }
 
     @Override
     public boolean mapLoaded() {
-        PortalSession portalSession = (PortalSession) Sessions.getCurrent().getAttribute("portalSession");
+        PortalSession portalSession = (PortalSession) Sessions.getCurrent().getAttribute(StringConstants.PORTAL_SESSION);
 
-        return ((portalSession != null) && portalSession.isMapLoaded());
+        return portalSession != null && portalSession.isMapLoaded();
     }
 
     /**
@@ -698,10 +573,8 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
      * @param title
      * @return
      */
-    @Override
     public String popupWindow(String uri, String title) {
-        String script = "window.open(\"" + uri + "\",\"" + title + "\");";
-        return script;
+        return "window.open(\"" + uri + "\",\"" + title + "\");";
     }
 
     /**
@@ -711,7 +584,6 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
      * @param title
      * @return
      */
-    @Override
     public void popupWindowNow(String uri, String title) {
         execute(popupWindow(uri, title));
     }
@@ -725,8 +597,12 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
         this.layerUtilities = layerUtilities;
     }
 
-
-    private String additionalScript = "";
+    public String getAdditionalScript() {
+        String aS = additionalScript;
+        // reset after use
+        additionalScript = "";
+        return aS;
+    }
 
     @Override
     public void setAdditionalScript(String additionalScript) {
@@ -736,13 +612,6 @@ public class OpenLayersJavascriptImpl implements OpenLayersJavascript {
         if (additionalScript != null) {
             this.additionalScript += additionalScript;
         }
-    }
-
-    @Override
-    public String getAdditionalScript() {
-        String aS = additionalScript;
-        additionalScript = ""; // reset after use
-        return aS;
     }
 
     @Override
